added GEEKCODE and CCPForge link

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         line-height: 1.0;
     }
     .tagline {
-        font-style: italic;
+	font-family: monospace;
         margin-top: 0px;
-        line-height: 1.0;
+        line-height: 1.1;
+	font-size: 0.8em;
     }
     .sites {
         margin-top: 50px;
@@ -43,7 +44,8 @@ Shawn Chin
 </div>
 
 <div class='tagline'>
-Jack of some trades, master of none
+GCS/IT y? a s:(+) d- b+(++)@ tv+ e+++<br />
+C+++$ UBLAHS++++(++)$ w+ M+ W+(+++)@
 </div>
 
 <div class='sites'>
@@ -53,6 +55,7 @@ Jack of some trades, master of none
 <p><a href='http://github.com/shawnchin'>shawnchin @ <strong>github</strong></a></p>
 <p><a href='http://twitter.com/shawnchin'>shawnchin @ <strong>twitter</strong></a></p>
 <p><a href='http://twitter.com/lsc_stfc'>lsc_stfc @ <strong>twitter</strong></a></p>
+<p><a href='http://ccpforge.cse.rl.ac.uk/gf/user/lsc/?action=Projects'>lsc @ <strong>CCPForge</strong></a></p>
 
 </div>
 
