--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ C+++$ UBLAHS++++(++)$ w+ M+ W+(+++)@
 <p><a href='http://uk.linkedin.com/in/shawnchin'>shawnchin @ <strong>linkedin</strong></a></p>
 <p><a href='http://stackoverflow.com/users/115845/shawn-chin'>Shawn Chin @ <strong>stackoverflow</strong></a></p>
 <p><a href='http://github.com/shawnchin'>shawnchin @ <strong>github</strong></a></p>
-<p><a href='http://twitter.com/shawnchin'>shawnchin @ <strong>twitter</strong></a></p>
+<!-- p><a href='http://twitter.com/shawnchin'>shawnchin @ <strong>twitter</strong></a></p>
 <p><a href='http://twitter.com/lsc_stfc'>lsc_stfc @ <strong>twitter</strong></a></p>
-<p><a href='http://ccpforge.cse.rl.ac.uk/gf/user/lsc/?action=Projects'>lsc @ <strong>CCPForge</strong></a></p>
+<p><a href='http://ccpforge.cse.rl.ac.uk/gf/user/lsc/?action=Projects'>lsc @ <strong>CCPForge</strong></a></p -->
 
 </div>
 
