--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 Shawn Chin
 </div>
 
-<div class='tagline'>
+<!-- div class='tagline'>
 GCS/IT y? a s:(+) d- b+(++)@ tv+ e+++<br />
 C+++$ UBLAHS++++(++)$ w+ M+ W+(+++)@
-</div>
+</div -->
 
 <div class='sites'>
 
