--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ C+++$ UBLAHS++++(++)$ w+ M+ W+(+++)@
 
 </div>
 
-<a href="http://github.com/shawnchin"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub" /></a>
+<!-- a href="http://github.com/shawnchin"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub" /></a -->
 
 </head>
 </html>
